--- a/.github/workflows/build-no-cache.yml
+++ b/.github/workflows/build-no-cache.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Restore project
       run: dotnet restore --locked-mode src/Captura.sln
     - name: Build project
-      run: dotnet build
+      run: dotnet build src/Captura.sln
