--- a/.github/workflows/build-with-cache.yml
+++ b/.github/workflows/build-with-cache.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         dotnet-version: 8.x
         cache: true
+        cache-dependency-path: src/Captura/packages.lock.json
     - name: Restore project
       run: dotnet restore --locked-mode src/Captura.sln
     - name: Build project
